--- a/app/src/main/res/layout/activity_detail_menu.xml
+++ b/app/src/main/res/layout/activity_detail_menu.xml
@@ -7,6 +7,18 @@
     android:layout_height="wrap_content"
     tools:context=".models.models.models.models.DetailMenuActivity">
 
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/detailMenuCartButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_baseline_shopping_cart_24" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
