--- a/app/src/main/res/layout/layout_cart_list_item.xml
+++ b/app/src/main/res/layout/layout_cart_list_item.xml
@@ -20,29 +20,45 @@
             android:orientation="horizontal"
             android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
 
             <TextView
                 android:id="@+id/CartItemDishName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:gravity="left"
                 android:text="Dish name"
                 android:textColor="#000000"
                 android:textColorHint="#000000"
                 android:textSize="19sp"
-                android:layout_alignParentLeft="true"/>
+                android:layout_centerVertical="true"/>
 
             <TextView
                 android:id="@+id/CartItemDishPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
+                android:layout_marginStart="18dp"
+                android:layout_marginLeft="18dp"
+                android:layout_toEndOf="@+id/CartItemDishName"
+                android:layout_toRightOf="@+id/CartItemDishName"
                 android:gravity="right"
                 android:text="TextView"
-                android:layout_alignParentRight="true"/>
+                android:layout_centerVertical="true"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/cartDeleteButton"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_alignParentRight="true"
+                app:backgroundTint="#000000"
+                app:cornerRadius="28dp"
+                app:icon="@drawable/ic_round_close_24"/>
 
         </RelativeLayout>
 
